service-ingress-pvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file codeserver.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  ports:
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: code-server
    app.kubernetes.io/instance: code-server
  name: code-server
  namespace: code-server
spec:
  rules:
  - host: code-server.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: code-server
              port:
                number: 8443
  - host: code-dev.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: code-server
              port:
                number: 3000
status:
  loadBalancer: {}
